Add tp_connection_can_set_contact_alias()

https://bugs.freedesktop.org/show_bug.cgi?id=28037